DF# fixed sonar bugs